--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -3,21 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_main"
-    app:startDestination="@id/signInFragment">
-
-    <fragment
-        android:id="@+id/signInFragment"
-        android:name="com.olgabakhur.baseproject.presentation.ui.signin.SignInFragment"
-        android:label="@string/app_name"
-        tools:layout="@layout/fragment_sign_in">
-        <action
-            android:id="@+id/action_signInFragment_to_breakingNewsFragment"
-            app:destination="@id/breakingNewsFragment" />
-    </fragment>
+    app:startDestination="@id/breakingNewsFragment">
 
     <fragment
         android:id="@+id/breakingNewsFragment"
-        android:name="com.olgabakhur.baseproject.presentation.ui.breakingnews.BreakingNewsFragment"
+        android:name="com.olgabakhur.baseproject.presentation.ui.articles.ArticlesFragment"
         android:label="@string/breaking_news_label"
-        tools:layout="@layout/fragment_breaking_news" />
+        tools:layout="@layout/fragment_articles" />
 </navigation>
