--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_main"
-    app:startDestination="@id/breakingNewsFragment">
+    app:startDestination="@id/articlesFragment">
 
     <fragment
-        android:id="@+id/breakingNewsFragment"
+        android:id="@+id/articlesFragment"
         android:name="com.olgabakhur.baseproject.presentation.ui.articles.ArticlesFragment"
-        android:label="@string/breaking_news_label"
+        android:label="@string/articles_label"
         tools:layout="@layout/fragment_articles" />
 </navigation>
