--- a/app/src/main/res/layout/view_holder_article.xml
+++ b/app/src/main/res/layout/view_holder_article.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/dimen_12"
-    android:layout_marginVertical="@dimen/dimen_6">
+    android:layout_marginHorizontal="@dimen/space_outer"
+    android:layout_marginVertical="@dimen/space_inner">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,12 +14,12 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvTitle"
             style="@style/TitleTextStyle"
-            android:layout_width="@dimen/dimen_0"
+            android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_outer"
-            android:layout_marginTop="@dimen/margin_outer"
+            android:layout_marginHorizontal="@dimen/space_outer"
+            android:layout_marginTop="@dimen/space_outer"
             android:ellipsize="marquee"
-            android:marqueeRepeatLimit="@integer/ellipsize_marquee_repeat_limit"
+            android:marqueeRepeatLimit="0"
             android:singleLine="true"
             app:layout_constraintBottom_toTopOf="@id/tvSource"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,11 +30,11 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvSource"
             style="@style/SubtitleTextStyle"
-            android:layout_width="@dimen/dimen_0"
+            android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_outer"
+            android:layout_marginHorizontal="@dimen/space_outer"
             android:ellipsize="marquee"
-            android:marqueeRepeatLimit="@integer/ellipsize_marquee_repeat_limit"
+            android:marqueeRepeatLimit="0"
             android:singleLine="true"
             app:layout_constraintBottom_toTopOf="@id/ivArticleImage"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,8 +45,8 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivArticleImage"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_0"
-            android:layout_marginTop="@dimen/margin_inner"
+            android:layout_height="@dimen/zero"
+            android:layout_marginTop="@dimen/space_inner"
             android:background="@color/secondaryNeutral"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_article_image_placeholder"
@@ -61,10 +61,10 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvContent"
             style="@style/BodyTextStyle"
-            android:layout_width="@dimen/dimen_0"
+            android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_outer"
-            android:layout_marginTop="@dimen/margin_inner"
+            android:layout_marginHorizontal="@dimen/space_outer"
+            android:layout_marginTop="@dimen/space_inner"
             app:layout_constraintBottom_toTopOf="@id/tvPublicationDate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,13 +74,13 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvPublicationDate"
             style="@style/BodyTextStyle"
-            android:layout_width="@dimen/dimen_0"
+            android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_outer"
-            android:layout_marginTop="@dimen/margin_inner"
-            android:layout_marginBottom="@dimen/margin_outer"
+            android:layout_marginHorizontal="@dimen/space_outer"
+            android:layout_marginTop="@dimen/space_inner"
+            android:layout_marginBottom="@dimen/space_outer"
             android:ellipsize="marquee"
-            android:marqueeRepeatLimit="@integer/ellipsize_marquee_repeat_limit"
+            android:marqueeRepeatLimit="0"
             android:singleLine="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
