--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,14 +27,9 @@
         <item name="colorOnError">@color/colorOnError</item>
 
         <!--    Customize the App theme-->
-        <item name="materialAlertDialogTheme">@style/DialogStyle_RoundedCorners</item>
-        <item name="circularProgressIndicatorStyle">@style/CircularProgressIndicator_Style</item>
-        <item name="materialCardViewStyle">@style/CardView_Style</item>
-        <item name="toolbarStyle">@style/Toolbar_Style</item>
-        <item name="android:itemTextAppearance">@style/PopupMenuTextAppearance</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
         <item name="android:statusBarColor">@color/colorBackground</item>
         <item name="android:windowLightStatusBar">true</item>
-        <item name="textInputStyle">@style/InputLayout_Style</item>
-        <item name="materialButtonStyle">@style/ButtonPrimary_Style</item>
+        <item name="materialCardViewStyle">@style/CardViewStyle</item>
     </style>
 </resources>
