--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,43 +1,23 @@
 <resources>
-    <dimen name="dimen_0">0dp</dimen>
-    <dimen name="dimen_1">1dp</dimen>
-    <dimen name="dimen_5">5dp</dimen>
-    <dimen name="dimen_6">6dp</dimen>
-    <dimen name="dimen_8">8dp</dimen>
-    <dimen name="dimen_12">12dp</dimen>
-    <dimen name="dimen_16">16dp</dimen>
-
-    <!--    Text-->
-    <dimen name="title_text_size">17sp</dimen>
-    <dimen name="header_medium_text">36sp</dimen>
-    <dimen name="header_large_text">50sp</dimen>
-
-    <dimen name="subtitle_text_size">15sp</dimen>
-    <dimen name="body_medium_text">17sp</dimen>
-    <dimen name="body_large_text">21sp</dimen>
-
-    <dimen name="body_text_size">13sp</dimen>
-    <dimen name="subtitle_medium">15sp</dimen>
-    <dimen name="subtitle_large">17sp</dimen>
-
-    <!--    Button. Primary-->
-    <dimen name="button_primary_text">17sp</dimen>
-
-    <!--    Dialog-->
-    <dimen name="dialog_corner_radius">10dp</dimen>
-
-    <!--    CardView-->
-    <dimen name="card_elevation">4dp</dimen>
-    <dimen name="card_corner_radius">10dp</dimen>
-
-    <!--    Clickable icon-->
-    <dimen name="clickable_icon_diameter_small">40dp</dimen>
-    <dimen name="clickable_icon_content_size_small">24dp</dimen>
-
-    <!--    Full screen elements width-->
+    <!--    Width / Height-->
+    <dimen name="zero">0dp</dimen>
     <dimen name="max_width_full_screen">650dp</dimen>
     <dimen name="max_width_half_screen">321dp</dimen>
 
-    <dimen name="margin_outer">16dp</dimen>
-    <dimen name="margin_inner">8dp</dimen>
+    <!--    Text-->
+    <dimen name="title_text_size">17sp</dimen>
+    <dimen name="subtitle_text_size">15sp</dimen>
+    <dimen name="body_text_size">13sp</dimen>
+
+    <!--    ProgressBar-->
+    <dimen name="progress_bar_radius">5dp</dimen>
+
+    <!--    CardView-->
+    <dimen name="card_view_elevation">4dp</dimen>
+    <dimen name="card_view_corner_radius">10dp</dimen>
+    <dimen name="card_view_stroke">1dp</dimen>
+
+    <!--    Margins / paddings-->
+    <dimen name="space_outer">12dp</dimen>
+    <dimen name="space_inner">6dp</dimen>
 </resources>
