--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:ns2="http://schemas.android.com/tools">
+<resources>
 
     <!--    Toolbar-->
     <style name="Theme.BaseProject.NoActionBar">
@@ -7,135 +7,41 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Toolbar_Style" parent="Widget.MaterialComponents.Toolbar.Primary">
+    <style name="ToolbarStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="android:background">@color/colorBackground</item>
         <item name="titleTextColor">?attr/colorOnBackground</item>
         <item name="titleCentered">true</item>
     </style>
 
-    <style name="ToolbarIconsTint_Style" parent="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary">
+    <style name="ToolbarIconsTintStyle" parent="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary">
         <item name="colorControlNormal">?attr/colorOnPrimary</item>
         <item name="actionMenuTextColor">?attr/colorOnPrimary</item>
-    </style>
-
-    <!--    PopUp-->
-    <style name="PopupMenuTextAppearance" parent="TextAppearance.AppCompat.Menu">
-        <item name="android:textColor">?attr/colorOnBackground</item>
     </style>
 
     <!--    Text-->
     <style name="TitleTextStyle">
         <item name="android:textSize">@dimen/title_text_size</item>
-        <item name="android:textColor">@color/headerText</item>
-        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/colorTitleText</item>
+        <item name="android:fontFamily">@font/roboto_bold</item>
     </style>
 
     <style name="SubtitleTextStyle">
         <item name="android:textSize">@dimen/subtitle_text_size</item>
-        <item name="android:textColor">@color/bodyText</item>
-        <item name="android:fontFamily">@font/roboto_regular</item>
+        <item name="android:textColor">@color/colorSubtitleText</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
     <style name="BodyTextStyle">
         <item name="android:textSize">@dimen/body_text_size</item>
-        <item name="android:textColor">@color/subtitleText</item>
+        <item name="android:textColor">@color/colorBodyText</item>
         <item name="android:fontFamily">@font/roboto_regular</item>
-    </style>
-
-    <!--    Text. Clickable link-->
-    <style name="ClickableLink_Style">
-        <item name="android:textSize">@dimen/subtitle_medium</item>
-        <item name="android:textColor">@color/primary_color_selector</item>
-        <item name="android:fontFamily">@font/roboto_regular</item>
-        <item name="android:clickable">true</item>
-    </style>
-
-    <!--    Clickable ImageButton-->
-    <style name="ClickableImageButton_Style">
-        <item name="android:foreground">@drawable/ripple_mask_oval_primary</item>
-        <item name="shapeAppearance">@style/CircleImageViewStyle</item>
-        <item name="android:tint">@color/on_background_color_selector</item>
-        <item name="android:scaleType">centerInside</item>
-        <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
-    </style>
-
-    <!--    InputLayout-->
-    <style name="InputLayout_Style" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">@color/colorPrimaryAlpha50</item>
-        <item name="hintTextColor">@color/colorPrimary</item>
-        <item name="errorEnabled">true</item>
-        <item name="endIconMode">clear_text</item>
-        <item name="startIconTint">@color/primary_color_selector_is_enabled</item>
-        <item name="prefixTextColor">@color/primary_color_selector_is_enabled</item>
-        <item name="suffixTextColor">@color/primary_color_selector_is_enabled</item>
-    </style>
-
-    <!--    Button. Primary-->
-    <style name="ButtonPrimary_Style" parent="@style/Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textSize">@dimen/button_primary_text</item>
-        <item name="android:textColor">@color/on_primary_color_selector</item>
-        <item name="backgroundTint">@color/primary_color_selector</item>
-        <item name="rippleColor">@color/colorRipplePrimary</item>
-        <item name="cornerRadius">6dp</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:insetLeft">@dimen/dimen_0</item>
-        <item name="android:insetTop">@dimen/dimen_0</item>
-        <item name="android:insetRight">@dimen/dimen_0</item>
-        <item name="android:insetBottom">@dimen/dimen_0</item>
-    </style>
-
-    <!--    Dialog. Rounded corners-->
-    <style name="DialogStyle_RoundedCorners" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
-        <item name="shapeAppearanceOverlay">
-            @style/ShapeAppearanceOverlay.MaterialAlertDialog.Rounded
-        </item>
-    </style>
-
-    <style name="ShapeAppearanceOverlay.MaterialAlertDialog.Rounded" parent="">
-        <item name="cornerSize">@dimen/dialog_corner_radius</item>
     </style>
 
     <!--    CardView-->
-    <style name="CardView_Style" parent="Widget.MaterialComponents.CardView">
-        <item name="cardBackgroundColor">@color/surface_color_selector_is_enabled</item>
-        <item name="cardCornerRadius">@dimen/card_corner_radius</item>
-        <item name="cardElevation">@dimen/card_elevation</item>
+    <style name="CardViewStyle" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">@dimen/card_view_corner_radius</item>
+        <item name="cardElevation">@dimen/card_view_elevation</item>
         <item name="strokeColor">@color/secondaryNeutral</item>
-        <item name="strokeWidth">@dimen/dimen_1</item>
-    </style>
-
-    <!--    Progress bar-->
-    <style name="CircularProgressIndicator_Style" parent="Widget.MaterialComponents.CircularProgressIndicator">
-        <item name="materialThemeOverlay">@style/ThemeOverlay.App.CircularProgressIndicator</item>
-    </style>
-
-    <style name="ThemeOverlay.App.CircularProgressIndicator" parent="">
-        <item name="colorPrimary">?attr/colorSecondary</item>
-    </style>
-
-    <!--    BottomSheet. System bars color-->
-    <style name="BottomSheet_SystemBarsStyle" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
-        <item name="android:windowIsFloating">false</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <item name="android:navigationBarColor">?attr/colorSurface</item>
-        <item name="android:windowLightNavigationBar" ns2:targetApi="o_mr1">true</item>
-        <item name="android:layout_height">match_parent</item>
-    </style>
-
-    <!--    BottomSheet. Transparent background-->
-    <style name="MenuBottomSheetStyle" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
-        <item name="bottomSheetStyle">@style/TransparentBackground</item>
-        <item name="android:maxWidth">640dp</item>
-    </style>
-
-    <style name="TransparentBackground" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@android:color/transparent</item>
-    </style>
-
-    <!--    ImageView. Circle-->
-    <style name="CircleImageViewStyle" parent="ShapeAppearance.MaterialComponents.MediumComponent">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">50%</item>
+        <item name="strokeWidth">@dimen/card_view_stroke</item>
     </style>
 </resources>
