--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
     </style>
 
     <style name="ToolbarStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
-        <item name="android:background">@color/colorBackground</item>
+        <item name="android:background">?attr/backgroundColor</item>
         <item name="titleTextColor">?attr/colorOnBackground</item>
         <item name="titleCentered">true</item>
     </style>
@@ -41,7 +41,7 @@
     <style name="CardViewStyle" parent="Widget.MaterialComponents.CardView">
         <item name="cardCornerRadius">@dimen/card_view_corner_radius</item>
         <item name="cardElevation">@dimen/card_view_elevation</item>
-        <item name="strokeColor">@color/secondaryNeutral</item>
+        <item name="strokeColor">?attr/colorPrimary</item>
         <item name="strokeWidth">@dimen/card_view_stroke</item>
     </style>
 </resources>
