--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topAppBar"
         app:navGraph="@navigation/nav_graph" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="@id/navHostFragment"
+        app:layout_constraintEnd_toEndOf="@id/navHostFragment"
+        app:layout_constraintStart_toStartOf="@id/navHostFragment"
+        app:layout_constraintTop_toTopOf="@id/navHostFragment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
